springboot-microservice/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-microservice
  labels:
    app: springboot-microservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: springboot-microservice
  template:
    metadata:
      labels:
        app: springboot-microservice
    spec:
      containers:
        - name: app
          image: dockercap123/springboot-microservice:0.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
