springboot-microservice/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springboot-microservice
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: microservice.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: springboot-microservice
                port:
                  number: 80
